# GrokYtalkY

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  LLMS.md  Makefile  README.md  anc_payload_expand_test.go  audio.go  audio_fx.go  bitchat.go  bitchat_api.go  bitchat_cmd.go  bitchat_test.go  blank_bridge.go  blank_bridge_test.go  burst.go  burst_test.go  camera_controls.go  camera_controls_test.go  cap_profile.go  cap_profile_test.go  caption_display_test.go  caption_payload.go  caption_payload_test.go  chat_bridge.go  chat_bridge_flags.go  chat_bridge_test.go  client.go  clock.go  clock_test.go  conductor_anc_integration_test.go  depth.go  depth_sidecar.go  depth_test.go  drop.go  drop_test.go  feeds.go  feeds_test.go  (+126 more)
.github/workflows/: ci.yml  pages.yml  release.yml
Formula/: grokytalky.rb
chat/: README.md  protocol.json
chat/worker/: package.json  wrangler.toml
chat/worker/src/: bridge.ts  index.ts  room-do.ts
configs/: default.toml
docs/: bitchat.md  burst.md  camera-controls.md  chat.md  companion.md  depth-gsplat.md  hdri.md  pages.md  platform-integration.md  powerhouse-stack.md  sphere-addressable.md  st2110-sync-cameras.md  stadium-glyph.md  stream-binary.md  stream-x.md  streams-capacity.md  vision.md  x-post-e2e.md
edge/: README.md
edge/mid-lane/: README.md  package-lock.json  package.json  wrangler.toml
edge/mid-lane/src/: index.ts  room-do.ts
examples/: dojo.pcap  patterns.md
examples/plugins/: README.md  chat-tag.json  heatmap-only.json
glyph/: README.md
glyph/app/src/main/: AndroidManifest.xml
glyph/app/src/main/res/drawable/: img_toy_preview.xml
glyph/app/src/main/res/values/: strings.xml
integrations/: grok-stream-platform.json  powerhouse-protocol.json  stadium-glyph.json
midi/: bridge.go  clock.go  midi.go  midi_nocgo.go  midi_rtmidi.go
scripts/: install-system.sh  install.sh  launch-livenews-tv.sh  launch-terminal.sh  powerhouse-up.sh  x-to-tv.sh  zipdepth-sidecar.sh
sfu/: Cargo.toml  README.md
sfu/src/: lanes.rs  main.rs  media.rs  metrics.rs  room.rs  signaling.rs
sfu/tests/: e2e_media.rs
site/: 404.html  bitchat-bridge.js  burst-orb.js  burst-spaces.js  burst-stage.js  burst.html  cam-bridge.js  camera-controls.js  chat-panel.js  chat.html  docs.html  dojo-room.js  dojo.html  glyph-cast-wire.js  glyph-cast-wire_test.mjs  glyph-cast.css  glyph-cast.html  glyph-cast.js  glyph-shared.js  grokglyph-presets.js  grokglyph.css  grokglyph.html  grokglyph.js  hdri-sphere.js  hdri-stitch.js  hdri-view.html  index.html  livenews.css  livenews.html  livenews.js  manifest-grokglyph.webmanifest  media-queue.js  media-sfu.js  mid-lane.html  news-live.js  news-sources.js  news-theme.js  news-theme_test.mjs  phone.html  phone.js  (+18 more)
strudel/: engine.go  mini.go  mini_test.go  sink_audio.go  sink_midi.go
(+4 files in other folders)
