[package]
name = "gy-sfu"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Minimal DOJO WebRTC SFU sidecar for GrokYtalkY — private rooms + glyph/hex lanes"
repository = "https://github.com/fornevercollective/GrokYtalkY"
readme = "README.md"
keywords = ["webrtc", "sfu", "grokytalky", "dojo"]
categories = ["network-programming", "multimedia"]

[features]
default = ["signaling"]
# Signaling-only: fast build, room registry, WS protocol (no libwebrtc).
signaling = []
# Full media path (webrtc-rs). Heavier compile; enable when wiring tracks.
media = ["dep:webrtc", "dep:bytes"]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
thiserror = "2"

# Optional — `cargo build -p gy-sfu --features media`
webrtc = { version = "0.12", optional = true }
bytes = { version = "1", optional = true }

[[bin]]
name = "gy-sfu"
path = "src/main.rs"

[dev-dependencies]
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
webrtc = "0.12"
bytes = "1"

[[test]]
name = "e2e_media"
path = "tests/e2e_media.rs"
required-features = ["media"]
